[gd_scene load_steps=18 format=3 uid="uid://cjb05x1lpdjf0"]

[ext_resource type="Script" path="res://scenes/ship/ship.gd" id="1_cr1ik"]
[ext_resource type="PackedScene" uid="uid://cobcn00385rbl" path="res://scenes/components/shield_generator.tscn" id="1_h5wr8"]
[ext_resource type="PackedScene" uid="uid://bg14jodmtvk0x" path="res://scenes/components/cargo_component.tscn" id="2_5i5ly"]
[ext_resource type="Script" path="res://scenes/components/ship_ai_component.gd" id="2_8n4sb"]
[ext_resource type="PackedScene" uid="uid://bujjc8sy450fd" path="res://scenes/components/engine_component.tscn" id="2_kdr6u"]
[ext_resource type="Script" path="res://scenes/components/scanner_component.gd" id="3_78kfm"]
[ext_resource type="PackedScene" uid="uid://nm768wtj15ct" path="res://scenes/components/armor_component.tscn" id="3_g8txf"]
[ext_resource type="Script" path="res://scenes/components/armor_component.gd" id="4_rg7a8"]
[ext_resource type="PackedScene" uid="uid://bv8xfh8lgm5hi" path="res://scenes/components/generator_component.tscn" id="4_v0p7y"]
[ext_resource type="PackedScene" uid="uid://bcnhe0pqjp7bx" path="res://scenes/components/identity_component.tscn" id="5_45nfj"]
[ext_resource type="Script" path="res://scenes/components/mining_container.gd" id="5_tbpag"]
[ext_resource type="PackedScene" uid="uid://bvxdxpa6o0x3n" path="res://scenes/components/chassis_component.tscn" id="7_wffsi"]
[ext_resource type="PackedScene" uid="uid://cs785yxiq8ssq" path="res://targeting_component.tscn" id="13_ijdfy"]
[ext_resource type="Script" path="res://targeting_component.gd" id="14_bfumf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_evbkf"]

[sub_resource type="BoxMesh" id="BoxMesh_jbrvq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tc3ci"]

[node name="Ship" type="Node3D" node_paths=PackedStringArray("ship_model") groups=["ships"]]
script = ExtResource("1_cr1ik")
ship_model = NodePath("ShipModel")

[node name="ShipModel" type="CharacterBody3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShipModel"]
shape = SubResource("BoxShape3D_evbkf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ShipModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("BoxMesh_jbrvq")

[node name="ShipAIComponent" type="Node3D" parent="."]
unique_name_in_owner = true
process_mode = 1
script = ExtResource("2_8n4sb")

[node name="EngineComponent" parent="." node_paths=PackedStringArray("targeting_component", "identity_component", "ship_model", "ship_node") instance=ExtResource("2_kdr6u")]
unique_name_in_owner = true
targeting_component = NodePath("../TargetingComponent")
identity_component = NodePath("../IdentityComponent")
ship_model = NodePath("../ShipModel")
ship_node = NodePath("..")

[node name="ScannerComponent" type="Node3D" parent="." node_paths=PackedStringArray("ship_node", "ship_model")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0102339, -1.19209e-07, 0.00559044)
script = ExtResource("3_78kfm")
scanner_range = 1000.0
ship_node = NodePath("..")
ship_model = NodePath("../ShipModel")
object_fade_in = 0.3

[node name="Area3D" type="Area3D" parent="ScannerComponent"]
unique_name_in_owner = true
collision_layer = 128
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScannerComponent/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0276051, 0, 0)
shape = SubResource("SphereShape3D_tc3ci")

[node name="Auxiliaries" type="Node3D" parent="."]

[node name="SpecialComponent" type="Node3D" parent="Auxiliaries"]

[node name="TurretContainer" type="Node3D" parent="."]
transform = Transform3D(0.999952, 0, 0.00975624, 0, 1, 0, -0.00975624, 0, 0.999952, 0, 0, 0.00858188)

[node name="MiningContainer" type="Node3D" parent="TurretContainer"]
unique_name_in_owner = true
script = ExtResource("5_tbpag")

[node name="CombatContainer" type="Node3D" parent="TurretContainer"]

[node name="DummyTurret" type="Node3D" parent="TurretContainer/CombatContainer"]

[node name="ShieldGenerator" parent="." instance=ExtResource("1_h5wr8")]
unique_name_in_owner = true

[node name="ArmorComponent" parent="." instance=ExtResource("3_g8txf")]
unique_name_in_owner = true
script = ExtResource("4_rg7a8")

[node name="WarpComponent" type="Node3D" parent="."]

[node name="GeneratorComponent" parent="." instance=ExtResource("4_v0p7y")]
unique_name_in_owner = true

[node name="CargoComponent" parent="." node_paths=PackedStringArray("identity_component") instance=ExtResource("2_5i5ly")]
unique_name_in_owner = true
identity_component = NodePath("../IdentityComponent")

[node name="IdentityComponent" parent="." instance=ExtResource("5_45nfj")]
unique_name_in_owner = true

[node name="ChassisComponent" parent="." instance=ExtResource("7_wffsi")]
unique_name_in_owner = true

[node name="TargetingComponent" parent="." instance=ExtResource("13_ijdfy")]
unique_name_in_owner = true
script = ExtResource("14_bfumf")

[node name="LaserSpawn" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.53477)

[connection signal="TargetFound" from="ScannerComponent" to="TargetingComponent" method="_on_scanner_component_target_found"]
[connection signal="TargetLost" from="ScannerComponent" to="TargetingComponent" method="_on_scanner_component_target_lost"]
[connection signal="body_entered" from="ScannerComponent/Area3D" to="ScannerComponent" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="ScannerComponent/Area3D" to="ScannerComponent" method="_on_area_3d_body_exited"]
[connection signal="ChassisDestroyed" from="ChassisComponent" to="." method="_on_chassis_component_chassis_destroyed"]
